* Bundled collection of updates accumulated over way too long    * Add in support for lintel-pthread library.    * Add support for Intel's compiler    * Add new Exponential Moving Average Stats class.    * Add new exception-based assertion class.    * Add 7z support to the batch-parallel compress module    * A bunch of bugfixes.
TODO: propose an improvement to our autoconf setup.
com_hp_hpl_lintel.m4: add in additional places to look for include bits.
  Begin trying to generalize our requirelib autoconf implementation. Add in
  bits for LINTELPTHREAD stuff.  Add in a whole bunch of 
  WITHLIB_{LZF,LZO,ZLIB,BZ2,PCRE,CRYPTO,PCAP} into here from other packages.
  Add support for icc, update flags for optimization.
configure.ac: Add in bits for lintel-pthread, lintel-acinclude.
Performance: add in some performance measurements used to work out 
  default tuning flags.
building.html: Add in notes on autoconf for srtlite.
lintel-acinclude.pod: Simple documentation for lintel-acinclude.
AssertException.H: Header file for assertions that throw an exception rather
  than just exiting.
Deque.H: Add in != operator, fixup description to be a little cleaner.
Double.H: Add in selfCheck() function.
HashMap.H: bugfix, initialize second() even if we aren't setting it.
  Add in an exists() function
PThread.H: rename PThread class to PThreadMisc so we can use the
  PThread class to actually represent threads.  Add in a PThread
  class.  Improve the error messages in PThreadMutex.
StatsEMA.H: Implement exponential moving average statistics blob.
  Allows for multiple EMA's with different decay rates to be
  calculated at the same time over the same inputs.
StringUtil.H: Add prefixequal function.
include/Makefile.am: add in AssertException.H, StatsEMA.H header files
AssertException.C: implementation
compress.pm: Add support for the 7z compression format, required
  updates to the other compression forms because 7z can't act as a
  pipe.
Double.C: work around icc bug, add in a selfCheck 

--- a/TODO
+++ b/TODO
@@ -18,3 +18,10 @@ it's roughly balanced.
 
 add support for checking of the lintel version into the
 HPL_REQUIRELIB_LINTEL bit.
+
+Figure out how to make a meta-macro that generates the
+HPL_{REQUIRELIB,WITHLIB}_{XML2,LZF,LZO,...} since all of those macros
+are so similar; a generalization of HPL_DEFINE_REQUIRELIB might work,
+but we want to check for various functions being defined, see the
+example HPL_REQUIRELIB_XML2 functions.
+
