* Add assertions that use the boost library to do formatting.
AssertBoost.H: Header file, defined DEBUG_CHECK, INVARIANT, and FATAL_ERROR
CompilerMarkup.H: bits for specifying the expected result of various
  comparisons.  Lets us optimize the invariant checks
AssertBoost.C: implementation of AssertBoostFail, both the string and
  boost::format taking versions.
TODO: Add todo around figuring out a compiler error with gcc-4.1 and HashMap
  in some template conditions.
include/Makefile.am: add in new header files
src/Makefile.am: add new sources, add to AM_CPPFLAGS so that we can eventually
  move to including Lintel/... everywhere.
*.in: dependent file rebuilds

--- a/TODO
+++ b/TODO
@@ -25,3 +25,5 @@ are so similar; a generalization of HPL_DEFINE_REQUIRELIB might work,
 but we want to check for various functions being defined, see the
 example HPL_REQUIRELIB_XML2 functions.
 
+HashMap.H: figure out why HashMap<const std::string, int> gives a
+compiler error with gcc-4.1
