* And now Lintel catches up to dataseries and loses the checked in      configure and *.in files.  Compilation instructions are included      in the README directory, but in summary:        * in sourcedir: autoreconf --install        * in builddir: ..../configure --enable-optmode=optimize && make && make check && make install
*.in, config.guess, config.sub, configure: bye bye to the generated 
  autoconf bits.

Makefile.am: add in magic flag that causes autoreconf to find 
  com_hp_hpl_lintel.m4 so that we don't need to run cp com*m4 acinclude.m4
  or a special version of lintel-acinclude

README: new building instructions

--- a/README
+++ b/README
@@ -19,4 +19,15 @@ or even simply hearing about how you are using the package.
 
 BUILDING
 
-See doc/building.html
+1) If you have a copy of Lintel checked out from version control, then
+   you need to run autoreconf --install in the source directory.  You
+   will need to have already installed autoconf and libtool.
+
+2) configure the package, e.g. in ~/build/optimize/Lintel:
+   .../path/to/source/Lintel/configure --enable-optmode=optimize
+
+3) compile and install the package, e.g. in ~/build/optimize/Lintel:
+   make && make check && make install
+
+For more details, see doc/building.html
+
