--- a/README
+++ b/README
@@ -19,15 +19,31 @@ or even simply hearing about how you are using the package.
 
 BUILDING
 
-1) If you have a copy of Lintel checked out from version control, then
-   you need to run autoreconf --install in the source directory.  You
-   will need to have already installed autoconf, automake and libtool.
+1a) Get source code (via version control):
+   [ -d ~/.monotone ] || mkdir ~/.monotone
+   mtn -d ~/.monotone/Lintel.db db init
+   mtn -d ~/.monotone/Lintel.db pull usi.hpl.hp.com ssd.hpl.hp.com/Lintel\*
+   [ -d ~/projects ] || mkdir ~/projects
+   cd ~/projects
+   mtn -d ~/.monotone/Lintel.db co -b ssd.hpl.hp.com Lintel
+   cd Lintel
+   autoreconf --install
+   # monotone intro: https://twiki.hpl.hp.com/bin/view/StorageSystems/MonotoneIntro
 
-2) configure the package, e.g. in ~/build/optimize/Lintel:
-   .../path/to/source/Lintel/configure --enable-optmode=optimize
+1b) Get source code (via tarball):
+   [ -d ~/projects ] || mkdir ~/projects
+   cd ~/projects
+   wget http://tesla.hpl.hp.com/opensource/Lintel-2007-04-05.tar.bz2
+   bunzip2 -c < Lintel-2007-04-05.tar.bz2 | tar xvvf -
+   mv Lintel-2007-04-05 Lintel
+   # more recent versions: http://tesla.hpl.hp.com/opensource/
 
-3) compile and install the package, e.g. in ~/build/optimize/Lintel:
+2) configure the package:
+   mkdir -p ~/build/optimize/Lintel
+   cd ~/build/optimize/Lintel
+   ~/projects/Lintel/configure --enable-optmode=optimize
+
+3) compile and install the package:
+   cd ~/build/optimize/Lintel:
    make && make check && make install
-
-For more details, see doc/building.html
 
