* Switch over from using autoconf to using cmake for the build setup.      This revision is probably a bit unstable, it passes all of my testing      using DataSeries and TiColi, but this is a fairly major change, so      may still have issues on other setups.  However, this is the direction      we want to move, so some short-term pain will have to be accepted.
   * As part of this change, we discovered that boost support is pretty 
     much required, so explicitly made it so. Also, dropped support for 
     gc and makebits; those are both old and unused.  

   * You'll probably want to remove all of your build directories, and
     remove the configure file created by autoconf before trying to
     update to this version.

Makefile.am, configure.ac, include/Makefile.am, src/Makefile.am:
  rename to -old as these are now obsolete, but we'll keep them around
  for a few revisions to make it easier to fix any bugs that pop up.

Random.Linux.regression: rename so Random.`uname`.regression gives the
  filename.

CMakeConfig.txt: CMake file for how people can configure lintel.

CMakeLists.txt: Main CMake build file.

cmake-modules/CMakeLists.txt: install the modules

cmake-modules/LintelCMakeUtil.cmake: some utility functions

configure: fake script that tells people they need to run cmake

include/CMakeLists.txt: install the include files

src/BatchParallel/CMakeLists.txt: install the batch-parallel files

src/CMakeLists.txt: build the library and executables

src/tests/CMakeLists.txt: build and run the tests

src/tests/run-check-{Random,Uncompress}.sh: run the Random/Uncompress tests.

Makefile.am-old: some minor changes made while I was starting to
  transition just the include subdirectory.

NEWS: update news to note the transition to cmake.

TODO: Add TODO to let us do ABI compatibility; remove some TODO's that
  are either obsolete or done.

com_hp_hpl_lintel.m4: remove some bits that we no longer use.

doc/CMakeLists.txt: Change how we reference some of the file

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+2008-05-09: 
+   * Switched over to using cmake for building instead of autoconf.  This
+     change is intended to move us toward being able to build on Windows.
+     As part of this change, we discovered that boost support is pretty 
+     much required, so explicitly made it so. Also, dropped support for 
+     gc and makebits; those are both old and unused.  
+
+2008-03-23: 
+   * Clock routines now check for frequency scaling and will not continue
+     if frequency scaling is enabled and the user has not accepted potentially
+     incorrect results.
+
+2008-03-04:
+   * Add segment plotting to mercury-plot
+
 2008-02-14:
    * Added tar batch-parallel module for taking a group of files in
      directories and creating tar files out of them of a specified size.
