README: fix build instructions StatsQuantile.cpp: verify Nbound >= 10000, below that just doesn't make sense   to use approx quantile.

--- a/README
+++ b/README
@@ -47,9 +47,9 @@ BUILDING
 2) configure the package:
    mkdir -p ~/build/optimize/Lintel
    cd ~/build/optimize/Lintel
-   ~/projects/Lintel/configure --enable-optmode=optimize
+   ccmake ~/projects/Lintel
 
 3) compile and install the package:
    cd ~/build/optimize/Lintel:
-   make && make check && make install
+   make && make test && make install
 
