--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -60,3 +60,10 @@
   key = "intel-energy-efficiency",
 }
 
+@misc{web/plank-gflib,
+  author = "James Plank",
+  title = "GFLIB - C Procedures for Galois Field Arithmetic and Reed-Solomon Coding",
+  note = "Available at \url{http://www.cs.utk.edu/~plank/plank/gflib/} Accessed June 2009",
+  key = "plank-gflib",
+}
+  
