* Added some entries;

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -67,3 +67,16 @@
   key = "plank-gflib",
 }
   
+@misc{web/lamport-pluscal,
+  author = "Leslie Lamport",
+  title = "The PlusCal Algorithm Language",
+  note = "Available at \url{http://research.microsoft.com/en-us/um/people/lamport/tla/pluscal.html} Accessed June 2009",
+  key = "lamport-pluscal",
+}
+
+@misc{web/lamport-tla,
+  author = "Leslie Lamport",
+  title = "TLA: The Temporal Logic of Actions",
+  note = "Available at \url{http://research.microsoft.com/en-us/um/people/lamport/tla/tla.html} Accessed June 2009",
+  key = "lamport-tla",
+}
