--- a/doc/references/osdi.bib
+++ b/doc/references/osdi.bib
@@ -1,4 +1,5 @@
 @string{osdi04 = "OSDI '04: Proceedings of the sixth Conference on Operating Systems Design and Implementation"}
+@string{osdi06 = "OSDI '06: Proceedings of the seventh Conference on Operating Systems Design and Implementation"}
 
 @inproceedings{dean+g-mapreduce:2004,
  author = {Dean, Jeffrey and Ghemawat, Sanjay},
@@ -9,3 +10,12 @@
  location = {San Francisco, CA},
  publisher = {USENIX Association},
  }
+
+@inproceedings{chang:bigtable:osdi2006,
+    author = "F. Chang and J. Dean and S. Ghemawhat and W.C. Hsieh and D.A. Wallach and M. Burrows and T. Chandra and A. Fikes and R.E. Gruber",
+    title = "Bigtable: {A} distributed storage system for structured data",
+    booktitle = osdi06,
+    pages = "205-218",
+month = "November",
+    year = "2006"
+}
