--- a/doc/references/vldb.bib
+++ b/doc/references/vldb.bib
@@ -1,7 +1,20 @@
+@string{vldb08 = "Proceedings of the 34th International Conference on Very Large Data Bases (VLDB'08)"}
+@string{vldb05 = "Proceedings of the 31st International Conference on Very Large Data Bases (VLDB'05)"}
+
+@inproceedings{stonebraker:cstore:vldb2005,
+    author = "Mike Stonebraker and Daniel Abadi and Adam Batkin and Xuedong Chen and Mitch Cherniack and Miguel Ferreira and Edmond Lau and Amerson Lin and Sam Madden and Elizabeth O'Neil and Pat O'Neil and Alex Rasin and Nga Tran and Stan Zdonik",
+    title = "{C-Store}: A column oriented {DBMS}",
+    booktitle = vldb05,
+    pages = "553-564",
+    month = "September 2",
+    year = "2005"
+}
+
+
 @inproceedings{Cooper08pnuts,
 author = "Cooper, Brian F. and Ramakrishnan,  Raghu and  Srivastava, Utkarsh and  Silberstein, Adam and Bohannon, Philip and Jacobsen, Hans-Arno and Puz, Nick and Weaver, Daniel and  Yerneni, Ramana",
 title = "{PNUTS}: {Y}ahoo!'s Hosted Data Serving Platform",
-booktitle = "Proc. 21st VLDB",
+booktitle = vldb08,
 year = "2008",
 pages = "1277--1288",
 month = "August",
