* Update bibliographies    * Add error on warnings option to lintel-latex-rebuild
*.bib: Add in additional references, fix reference styles

lintel-latex-rebuild.in: Add in --error-on-warnings option so that you can
  prevent successful builds with missing references.

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -11,7 +11,7 @@
 }
 
 @misc{apps/vtun,
-  author = "Maxim Krasnyansky, et. al.",
+  author = "{Maxim Krasnyansky, et. al.}",
   title = "VTUN virtual tunnel",
   note = "Available at \url{http://vtun.sourceforge.net/} Accessed June 2009", 
 }
@@ -74,4 +74,10 @@
   author = "Leslie Lamport",
   title = "TLA: The Temporal Logic of Actions",
   note = "Available at \url{http://research.microsoft.com/en-us/um/people/lamport/tla/tla.html} Accessed June 2009",
+}
+
+@misc{web/pip-implementation,
+  title = "Pip",
+  note = "Available at \url{http://issg.cs.duke.edu/pip/}.  Snapshot 20070503, Accessed January 2008",
+  key = "pip"
 }
