--- a/doc/references/mascots.bib
+++ b/doc/references/mascots.bib
@@ -1,6 +1,6 @@
 @string{mascots2009 = "MASCOTS 2009"}
 
-@article{anderson+hlt:chirp:2009,
+@article{anderson:chirp:mascots2009,
   author = {Eric Anderson and Christopher Hoover and Xiaozhou Li and Joseph Tucek},
   title = "{Efficient Tracing and Performance Analysis for Large Distributed Systems}",
   journal = mascots2009,
