18/EB. Mini Review: Consistability and formal methods
doc/references/cacm.bib
   - Fixed error in bib entry

--- a/doc/references/cacm.bib
+++ b/doc/references/cacm.bib
@@ -1,4 +1,4 @@
-@article{~\cite{lipton:reduction:cacm1975},
+@article{lipton:reduction:cacm1975,
  author    = {Richard J. Lipton},
  title     = {Reduction: A Method of Proving Properties of Parallel Programs},
  journal   = {Commun. ACM},
