web-sites.bib: add dataseries open source bit

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -81,3 +81,9 @@
   note = "Available at \url{http://issg.cs.duke.edu/pip/}.  Snapshot 20070503, Accessed January 2008",
   key = "pip"
 }
+
+@misc{DSOpenSource,
+  title = "Lintel and DataSeries libraries",
+  note = "Available at \url{http://tesla.hpl.hp.com/opensource/} Accessed June 2009",
+  key = "dsopensource",
+}
