* A pass through the formal.tex;

--- a/doc/references/acmtoplas.bib
+++ b/doc/references/acmtoplas.bib
@@ -10,3 +10,14 @@
     PUBLISHER = "ACM",
     KEY = "Herlihy90"
 }
+
+@article{clarke:abstraction:toplas1994,
+  author = "Clarke, Edmund M. and Grumberg, Orna and Long, David E.",
+  title = "Model checking and abstraction",
+  year = "1994",
+  journal = TOPLAS,
+  month = "September",
+  pages = "1512--1542",
+  volume = "16",
+  number = "5",
+}
