* Adding sigcomm.bib and added an entry to web-sites.bib;

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -87,3 +87,10 @@
   note = "Available at \url{http://tesla.hpl.hp.com/opensource/} Accessed June 2009",
   key = "dsopensource",
 }
+
+@misc{web/jones-kvs,
+  author = "Richard Jones",
+  title = "Anti-RDBMS: {A} list of distributed key-value stores",
+  note = "Available at \url{http://www.metabrew.com/article/anti-rdbms-a-list-of-distributed-key-value-stores} Accessed July 2009",
+}
+  
