web-sites.bib: add reference

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -93,4 +93,9 @@
   title = "Anti-RDBMS: {A} list of distributed key-value stores",
   note = "Available at \url{http://www.metabrew.com/article/anti-rdbms-a-list-of-distributed-key-value-stores} Accessed July 2009",
 }
-  
+
+@misc{web/ee382c-synchronous-reactive,
+  author = "Stephen Edwards",
+  title = "EE382C Embedded Software Systems Synchronous/Reactive Systems",
+  note = "Available at \url{http://users.ece.utexas.edu/~bevans/courses/ee382c/lectures/21_sr/} Accessed July 2009",
+}
