* 19/AC : More bib entries.
web-sites.bib
- rad lab, cloud paper, and cloudstore (kosmos fs)

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -87,3 +87,21 @@
   note = "Available at \url{http://tesla.hpl.hp.com/opensource/} Accessed June 2009",
   key = "dsopensource",
 }
+
+@misc{web/radlab,
+  title = "RAD LAB",
+  note = "Available at \url{http://radlab.cs.berkeley.edu/}. Accessed July 2009",
+  key = "radlab"
+}
+
+@misc{web/radlab/cloudpaper,
+  author = "Michael Armbrust and Armando Fox and Rean Griffith and Anthony D. Joseph and Randy Katz and Andy Konwinski and Gunho Lee and David Patterson and Ariel Rabkin and Ion Stoica and Matei Zaharia",
+  title = "{A}bove the Clouds: A {B}erkeley View of Cloud Computing",
+  note = "Available at \url{http://d1smfj0g31qzek.cloudfront.net/abovetheclouds.pdf}. Accessed July 2009",
+}
+
+@misc{web/cloudstore,
+  title = "CloudStore",
+  note = "Available at \url{http://kosmosfs.sourceforge.net/}. Accessed July 2009",
+  key = "cloudstore"
+}
