* Added ics.bib;
* Added a new entry to mascots.bib;

--- a/doc/references/mascots.bib
+++ b/doc/references/mascots.bib
@@ -1,9 +1,21 @@
-@string{mascots2009 = "MASCOTS 2009"}
+@string{mascots2006 = "MASCOTS '06: Proceedings of the 14th IEEE International Symposium on Modeling, Analysis, and Simulation "}
+@string{mascots2009 = "MASCOTS '09: Proceedings of the 17th IEEE International Symposium on Modeling, Analysis, and Simulation "}
 
-@article{anderson:chirp:mascots2009,
+@inproceedings{bhagwat:reliab:mascots2006,
+  author = "Deepavali Bhagwat and Kristal Pollack and Darrell D. E. Long and Thomas Schwarz and Ethan L. Miller and Jehan-Francois Paris",
+  title = "Providing high reliability in a minimum redundancy archival storage system",
+  booktitle = mascots2006,
+  year = "2006",
+  month = "September",
+  pages = "413--421",
+}
+
+@inproceedings{anderson:chirp:mascots2009,
   author = {Eric Anderson and Christopher Hoover and Xiaozhou Li and Joseph Tucek},
   title = "{Efficient Tracing and Performance Analysis for Large Distributed Systems}",
-  journal = mascots2009,
+  booktitle = mascots2009,
   year = "2009",
+  month = "September",
+  note = "To appear",
 }
 
