Minor tweaks to bib files (needed space at end of some bib and fixed a typo)

--- a/doc/references/hotdep.bib
+++ b/doc/references/hotdep.bib
@@ -10,7 +10,7 @@
 }
 
 @proceedings{DBLP:conf/hotdep/2008,
-  title     = {Proceedings of the Fourth Workshop on Hot Topics in Syetms
+  title     = {Proceedings of the Fourth Workshop on Hot Topics in Systems
                Dependability, HotDep 2008, San Diego, CA, USA, December
                7, 2008},
   booktitle = {HotDep},
