tr.bib: bibliography file for TR's
references/CMakeLists.txt: add tr.bib

web-sites.bib: add reference

tests/CMakeLists.txt: remove duplicate build of byte_buffer program

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -117,3 +117,10 @@
   title = "EE382C Embedded Software Systems Synchronous/Reactive Systems",
   note = "Available at \url{http://users.ece.utexas.edu/~bevans/courses/ee382c/lectures/21_sr/} Accessed July 2009",
 }
+
+@misc{hamilton+j-POA:2009,
+  title = "Service Design Best Practices",
+  author = "James Hamilton",
+  note = "Available at \url{http://www.mvdirona.com/jrh/TalksAndPapers/JamesHamilton_POA20090226.pdf} Accessed September 2009"
+}
+
