--- a/doc/references/os-review.bib
+++ b/doc/references/os-review.bib
@@ -24,3 +24,18 @@
     year = {2009},
     pages = {70--75},
 }
+
+@article{weatherspoon:gossiping-over-storage-systems-is-practical:os-review2007,
+ author = {Weatherspoon, Hakim and Miranda, Hugo and Iwanicki, Konrad and Ghodsi, Ali and Busnel, Yann},
+ title = {Gossiping over storage systems is practical},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ volume = {41},
+ number = {5},
+ year = {2007},
+ issn = {0163-5980},
+ pages = {75--81},
+ doi = {http://doi.acm.org/10.1145/1317379.1317391},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ abstract = {Gossip-based mechanisms are touted for their simplicity, limited resource usage, robustness to failures, and tunable system behavior. These qualities make gossiping an ideal mechanism for storage systems that are responsible for maintaining and updating data in a mist of failures and limited resources (e.g., intermittent network connectivity, limited bandwidth, constrained communication range, or limited battery power). We focus on persistent storage systems that, unlike mere caches, are responsible for both the durability and the consistency of data. Examples of such systems may be encountered in many different environments, in particular: wide-area networks (constrained by limited bandwidth), wireless sensor networks (characterized by limited resources), and mobile ad hoc networks (suffering from intermittent connectivity). In this paper, we demonstrate the qualities of gossiping in these three respective environments.}
+}
