--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -1,5 +1,24 @@
+@string{sosp1995 = "SOSP '95: Proceedings of the 15th ACM Symposium on Operating Systems Principles"}
 @string{sosp2003 = "SOSP '03: Proceedings of the 19th ACM Symposium on Operating Systems Principles"}
 @string{sosp2007 = "SOSP '07: Proceedings of the 21st ACM Symposium on Operating Systems Principles"}
+
+
+@inproceedings{terry:bayou:sosp1995,
+  author    = {Douglas B. Terry and
+               Marvin Theimer and
+               Karin Petersen and
+               Alan J. Demers and
+               Mike Spreitzer and
+               Carl Hauser},
+  title     = {Managing Update Conflicts in Bayou, a Weakly Connected Replicated Storage System},
+  booktitle = sosp1995,
+  year      = {1995},
+  pages     = {172-183},
+  abstract  = {Bayou is a replicated, weakly consistent storage system designed for a mobile computing environment that includes portable machines with less than ideal network connectivity. To maximize availability, users can read and write any accessible replica.... Motivation, design, and initial experiences.},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 
 @inproceedings{ghemawat:google-fs:sosp2003,
   author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
