--- a/doc/references/ieeetoc.bib
+++ b/doc/references/ieeetoc.bib
@@ -8,3 +8,21 @@ volume={C-29},
 number={8},
 pages={720--731},
 }
+
+
+@article{satyanarayanan:coda:ieeetoc1990,
+ author = {Satyanarayanan, Mahadev and Kistler, James J. and Kumar, Puneet and Okasaki, Maria E. and Siegel, Ellen H. and Steere, David C.},
+ title = {Coda: A Highly Available File System for a Distributed Workstation Environment},
+ journal = {IEEE Trans. Comput.},
+ volume = {39},
+ number = {4},
+ year = {1990},
+ issn = {0018-9340},
+ pages = {447--459},
+ doi = {http://dx.doi.org/10.1109/12.54838},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ abstract = {The design and implementation of Coda, a file system for a large-scale distributed computing environment composed of Unix workstations, is described. It provides resiliency to server and network failures through the use of two distinct but complementary mechanisms. One mechanism, server replication, stores copies of a file at multiple servers. The other mechanism, disconnected operation, is a mode of execution in which a caching site temporarily assumes the role of a replication site. The design of Coda optimizes for availability and performance and strives to provide the highest degree of consistency attainable in the light of these objectives. Measurements from a prototype show that the performance cost of providing high availability in Coda is reasonable.}
+ }
+
+
